kubernetes/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employees-backend
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: employees
    tier: backend
